--- a/src/main/resources/templates/app/nav.html
+++ b/src/main/resources/templates/app/nav.html
@@ -30,7 +30,7 @@
 			</ul>
 		</div>
 	</nav>
-	<div aria-live="polite" aria-atomic="true" class="sticky-top">
+	<div aria-live="polite" aria-atomic="true" class="sticky-top" style="z-index: 9999">"
 		<div id="toast-container" class="toast-container position-absolute top-0 end-0"></div>
 	</div>
 </body>
